implementaçao de watchers

--- a/public/partials/foto.html
+++ b/public/partials/foto.html
@@ -37,7 +37,7 @@
     <button type="submit" class="btn btn-primary" ng-disabled="formulario.$invalid">
       Salvar
     </button>
-    <a href="/" class="btn btn-default">Voltar</a>
+    <a href="/" class="btn btn-default" meu-focus focado="focado">Voltar</a>
     <hr>
   </div>
   <div class="col-md-6">
